test/errors/array_access_non_array.correct
error: array_access_non_array.li:2:1: left-hand side of array access is not an array or string
│ x[0];
│ ~
│ ^
